unpackaged/main/default/objects/APXTConga4__Document_History_Detail__c/APXTConga4__Document_History_Detail__c.object-meta.xml
<CustomObject>
    <label>Document History Detail</label>
    <nameField>
        <displayFormat>DHD-{0000}</displayFormat>
        <label>Document History Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>