unpackaged/main/default/objects/APXTConga4__Document_History_Detail__c/fields/APXTConga4__Email_Address__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>