unpackaged/main/default/objects/APXTConga4__Document_History_Detail__c/fields/APXTConga4__Last_Viewed__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Last_Viewed__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Viewed</label>
    <type>DateTime</type>
</CustomField>